# driverassistance-cv-core

./: .gitignore  CMakeLists.txt  README.md  main.cpp  yolov4.cpp  yolov4.h
include/: track.h  tracker.h
models/: custom-yolov4-tiny-detector_opt.param
src/: main.cpp  track.cpp  tracker.cpp  yolov4.cpp  yolov4.h
